--- a/app/res/schelling.ui
+++ b/app/res/schelling.ui
@@ -12,7 +12,7 @@
   </property>
   <property name="sizePolicy">
    <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
-    <horstretch>0</horstretch>
+    <horstretch>2</horstretch>
     <verstretch>0</verstretch>
    </sizepolicy>
   </property>
@@ -28,6 +28,12 @@
     <height>344</height>
    </size>
   </property>
+  <property name="sizeIncrement">
+   <size>
+    <width>1</width>
+    <height>1</height>
+   </size>
+  </property>
   <property name="font">
    <font>
     <underline>false</underline>
@@ -35,7 +41,7 @@
    </font>
   </property>
   <property name="windowTitle">
-   <string>MainWindow</string>
+   <string>GeoSchelling</string>
   </property>
   <property name="styleSheet">
    <string notr="true">background-color: rgb(0, 0, 0);</string>
@@ -205,7 +211,7 @@ color: rgb(255, 255, 255);</string>
      <bool>false</bool>
     </property>
    </widget>
-   <widget class="QSlider" name="horizontalSlider">
+   <widget class="QSlider" name="spacingSlider">
     <property name="geometry">
      <rect>
       <x>389</x>
@@ -242,7 +248,7 @@ color: rgb(255, 255, 255);</string>
      <enum>QSlider::TicksBelow</enum>
     </property>
    </widget>
-   <widget class="QSlider" name="horizontalSlider_2">
+   <widget class="QSlider" name="emptyratioSlider">
     <property name="geometry">
      <rect>
       <x>389</x>
@@ -267,7 +273,7 @@ color: rgb(255, 255, 255);</string>
      <enum>QSlider::TicksBelow</enum>
     </property>
    </widget>
-   <widget class="QSlider" name="horizontalSlider_3">
+   <widget class="QSlider" name="similaritySlider">
     <property name="geometry">
      <rect>
       <x>389</x>
@@ -295,7 +301,7 @@ color: rgb(255, 255, 255);</string>
      <enum>QSlider::TicksBelow</enum>
     </property>
    </widget>
-   <widget class="QSlider" name="horizontalSlider_4">
+   <widget class="QSlider" name="demographicSlider">
     <property name="geometry">
      <rect>
       <x>389</x>
@@ -352,7 +358,7 @@ background-color: rgb(255, 255, 255);</string>
       </widget>
      </item>
      <item>
-      <widget class="QPushButton" name="pushButton_3">
+      <widget class="QPushButton" name="populateButton">
        <property name="sizePolicy">
         <sizepolicy hsizetype="MinimumExpanding" vsizetype="Maximum">
          <horstretch>0</horstretch>
@@ -382,7 +388,7 @@ background-color: rgb(255, 255, 255);</string>
       </widget>
      </item>
      <item>
-      <widget class="QPushButton" name="pushButton">
+      <widget class="QPushButton" name="runButton">
        <property name="sizePolicy">
         <sizepolicy hsizetype="MinimumExpanding" vsizetype="Maximum">
          <horstretch>0</horstretch>
@@ -399,9 +405,27 @@ background-color: rgb(255, 255, 255);</string>
        </property>
       </widget>
      </item>
+     <item>
+      <widget class="QPushButton" name="endButton">
+       <property name="sizePolicy">
+        <sizepolicy hsizetype="MinimumExpanding" vsizetype="Maximum">
+         <horstretch>0</horstretch>
+         <verstretch>0</verstretch>
+        </sizepolicy>
+       </property>
+       <property name="styleSheet">
+        <string notr="true">color: rgb(0, 0, 0);
+font: 75 10pt &quot;MS Shell Dlg 2&quot;;
+background-color: rgb(255, 255, 255);</string>
+       </property>
+       <property name="text">
+        <string>End</string>
+       </property>
+      </widget>
+     </item>
     </layout>
    </widget>
-   <widget class="QLabel" name="label_6">
+   <widget class="QLabel" name="spacingLabel">
     <property name="geometry">
      <rect>
       <x>280</x>
@@ -431,11 +455,11 @@ background-color: rgb(255, 255, 255);</string>
      <set>Qt::AlignCenter</set>
     </property>
    </widget>
-   <widget class="QLabel" name="label_7">
+   <widget class="QLabel" name="emptyLabel">
     <property name="geometry">
      <rect>
       <x>280</x>
-      <y>180</y>
+      <y>190</y>
       <width>41</width>
       <height>24</height>
      </rect>
@@ -461,7 +485,7 @@ background-color: rgb(255, 255, 255);</string>
      <set>Qt::AlignCenter</set>
     </property>
    </widget>
-   <widget class="QLabel" name="label_8">
+   <widget class="QLabel" name="similarityLabel">
     <property name="geometry">
      <rect>
       <x>280</x>
@@ -491,7 +515,7 @@ background-color: rgb(255, 255, 255);</string>
      <set>Qt::AlignCenter</set>
     </property>
    </widget>
-   <widget class="QLabel" name="label_9">
+   <widget class="QLabel" name="demographicLabel">
     <property name="geometry">
      <rect>
       <x>280</x>
